--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ on:
     branches: [ main ]
 
 permissions:
-  contents: write   
+  contents: write   # needed to push to gh-pages
 
 jobs:
   build-deploy:
@@ -17,9 +17,9 @@ jobs:
       - name: Set up Node.js (with cache for subfolder)
         uses: actions/setup-node@v4
         with:
-        node-version: 20
-        cache: npm
-        cache-dependency-path: dews-hawaii-app/package-lock.json
+          node-version: 20
+          cache: npm
+          cache-dependency-path: dews-hawaii-app/package-lock.json
 
       - name: Install dependencies
         working-directory: dews-hawaii-app
@@ -36,7 +36,5 @@ jobs:
       - name: Deploy to GitHub Pages (gh-pages branch)
         uses: JamesIves/github-pages-deploy-action@v4
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}   # uses repo token
           branch: gh-pages
           folder: dews-hawaii-app/dist/dews-hawaii-app/browser
-          clean: true
