--- a/dews-hawaii-app/package.json
+++ b/dews-hawaii-app/package.json
@@ -19,7 +19,10 @@
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
+    "@mapbox/geojson-rewind": "^0.5.2",
+    "@turf/turf": "^7.2.0",
     "chart.js": "^4.5.0",
+    "d3-geo": "^3.1.1",
     "ng2-charts": "^6.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -29,6 +32,7 @@
     "@angular-devkit/build-angular": "^18.2.11",
     "@angular/cli": "^18.2.11",
     "@angular/compiler-cli": "^18.2.0",
+    "@types/d3-geo": "^3.1.0",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.2.0",
     "karma": "~6.4.0",
