--- a/dews-hawaii-app/package.json
+++ b/dews-hawaii-app/package.json
@@ -21,9 +21,11 @@
     "@angular/router": "^18.2.0",
     "@mapbox/geojson-rewind": "^0.5.2",
     "@turf/turf": "^7.2.0",
+    "@types/leaflet": "^1.9.20",
     "chart.js": "^4.5.0",
     "d3": "^7.9.0",
     "d3-geo": "^3.1.1",
+    "leaflet": "^1.9.4",
     "ng2-charts": "^6.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
