--- a/dews-hawaii-app/package.json
+++ b/dews-hawaii-app/package.json
@@ -25,6 +25,7 @@
     "chart.js": "^4.5.0",
     "d3": "^7.9.0",
     "d3-geo": "^3.1.1",
+    "geotiff": "^2.1.4-beta.0",
     "leaflet": "^1.9.4",
     "ng2-charts": "^6.0.1",
     "rxjs": "~7.8.0",
